--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "infinite_carousel",
   "version": "1.0.0",
-  "description": "",
+  "description": "Infinite carousel with a variety of options",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development",
@@ -21,6 +21,7 @@
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.13.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
